--- a/public/controle.html
+++ b/public/controle.html
@@ -95,7 +95,7 @@
   </main>
 
   <script>
-    const socket = new WebSocket(`ws://${location.host}`);
+    const socket = new WebSocket(`wss://${location.host}`);
     let fila = [];
     let ativoIndex = null;
 
