arrumado botão iniciar, parar, resetar e proximo

--- a/public/controle.html
+++ b/public/controle.html
@@ -137,10 +137,15 @@
       background-color: #6b7280; /* Cinza */
       cursor: not-allowed;
     }
+    
 
     /* Botão Parar */
     #btnParar {
       background-color: #ef4444; /* Vermelho */
+    }
+    #btnResetar:disabled {
+      background-color: #6b7280; /* Cinza */
+     cursor: not-allowed;
     }
     /* Botão Próximo */
     #btnProximo {
@@ -167,6 +172,7 @@
     <div class="controles-centrais">
       <button id="btnIniciar">Iniciar</button>
       <button id="btnParar" disabled>Parar</button>
+      <button id="btnResetar" disabled>Resetar</button>
       <button id="btnProximo" disabled>Próximo</button>
     </div>
     
